<resources>
    <string name="app_name">Inksnap</string>
    <string name="title_label">Title</string>
    <string name="title_hint">Enter a title for the post</string>
    <string name="content_label">Content</string>
    <string name="content_hint">Enter the content of the post</string>
    <string name="subreddit_label">Subreddit</string>
    <string name="subreddit_hint">Enter the name of the subreddit</string>
    <string name="menu_signin">Sign In</string>
    <string name="menu_add">Add post</string>
    <string name="menu_delete">Delete</string>
    <string name="save_text">Save</string>
    <string name="intended_submit_date_label">Date and time</string>
    <string name="log_clear">Clear</string>
    <string name="log_copy">Copy</string>
    <string name="post_thumbnail">Post thumbnail</string>
    <string name="menu_export">Export</string>
    <string name="menu_sort_by">Sort By…</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_date">Date</string>
    <string name="menu_search">Search</string>
    <string name="paste">Paste</string>
    <string name="settings">Settings</string>
    <string name="reddit_account">Reddit account</string>
    <string name="log_out">Log out</string>
    <string name="imgur_account">Imgur account</string>
    <string name="timer_period">Timer period</string>
    <string name="wallpaper_mode">Wallpaper mode</string>
    <string name="posted">Posted</string>
    <string name="failed">Failed</string>
    <string name="done">Done</string>
    <string name="log">Log</string>
    <string name="url">Url</string>
    <string name="enter_the_url_of_the_post">Enter the url of the post</string>
    <string name="an_interesting_title">An interesting title</string>
    <string name="the_subreddit_you_re_posting_to">The subreddit you\'re posting to</string>
    <string name="http">http://</string>
    <string name="r">/r/</string>
    <string name="subreddit">subreddit</string>
    <string name="your_text_post_optional">Your text post (optional)</string>
    <string name="check_service">Check service</string>
    <string name="queue_bottom_navbar">Queued</string>
    <string name="posted_bottom_navbar">Posted</string>
    <string name="failed_bottom_navbar">Failed</string>
    <string name="next_post_in">Next post in</string>
    <string name="no_posts_found">No posts here.</string>
    <string name="help_icon">help icon</string>
    <string name="app_icon">App icon</string>
    <string name="about">About</string>
    <string name="feedback_and_support">Feedback and support</string>
    <string name="inksnap_subreddit">/r/inksnap</string>
    <string name="support_url">https://reddit.com/r/inksnap</string>
    <string name="contact_the_developer">Contact the developer</string>
    <string name="contact_email">inksnap@outlook.com</string>
    <string name="greeting">Welcome to Inksnap</string>
    <string name="to_start_use_your_reddit_account_to_log_in">to start, use your Reddit account to log in</string>
    <string name="log_in_with_reddit">Log in with Reddit</string>
    <string name="explanation">Some settings can be changed only when submission is turned off</string>
    <string name="scheduling_type">Scheduling Type</string>
    <string name="killswitch_text">Please update it using Google Play Store. Sorry for the inconvenience.</string>
    <string name="killswitch_title">This app is out of date</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url">https://nocturnl.me/inksnap-privacy-policy/</string>
    <string name="import_posts">Import</string>
    <string name="clear_all_posts">Clear All Posts</string>
</resources>
