<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    
    <item
        android:id="@+id/menu_queue_add"
        android:title="@string/menu_add"
        android:icon="@drawable/menu_add"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/menu_queue_search"
        android:title="@string/menu_search"
        android:icon="@drawable/menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/menu_queue_sort_by"
        android:title="@string/menu_sort_by"
        android:icon="@drawable/menu_sort_by"
        app:showAsAction="ifRoom|withText"
        >
        
        <menu>

            <item
                android:id="@+id/menu_queue_sort_by_title"
                android:title="@string/sort_by_title"
                />

            <item
                android:id="@+id/menu_queue_sort_by_date"
                android:title="@string/sort_by_date"
                />
            
        </menu>
        
    </item>
    
    <item
        android:id="@+id/menu_queue_extract"
        android:title="@string/menu_extract"
        />
    
</menu>