<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".PostFragment"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/title_hint"
        android:inputType="text"
        />

    <Switch
        android:id="@+id/post_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_label"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/content_hint"
        android:inputType="text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subreddit_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/post_subreddit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/subreddit_hint"
        android:inputType="text"
        android:enabled="false"
        />
    
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center_horizontal"-->
        <!--&gt;-->

        <!--<Button-->
            <!--android:id="@+id/auth_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/auth_text"-->
            <!--android:layout_margin="10dp"-->
            <!--style="?android:attr/buttonBarButtonStyle"-->
            <!--/>-->
        <!---->
        <!--<Button-->
            <!--android:id="@+id/submit_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/submit_text"-->
            <!--android:layout_margin="10dp"-->
            <!--style="?android:attr/buttonBarButtonStyle"-->
            <!--/>-->
        <!---->
    <!--</LinearLayout>-->
    
</LinearLayout>