<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_icon"
        />

    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/killswitch_title"
        android:textSize="24sp"
        android:gravity="center_vertical"
        android:fontFamily="sans-serif-thin"
        />
    
    <TextView
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/killswitch_text"
        android:textSize="16sp"
        android:fontFamily="sans-serif-thin"
        />

</LinearLayout>