<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:text="@string/reddit_account"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/reddit_toggle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="22dp"
                android:text="@string/log_out" />
            
        </RelativeLayout>

        <View style="@style/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:text="@string/imgur_account"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/imgur_toggle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="22dp"
                android:text="@string/log_out" />

        </RelativeLayout>

        <View style="@style/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:text="@string/wallpaper_mode"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/wallpaper_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="22dp"
                />

        </RelativeLayout>

        <View style="@style/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            >

            <Button
                android:id="@+id/autosubmit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:text="@string/autosubmit_type"
                />

        </RelativeLayout>

        <View style="@style/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            >

            <Button
                android:id="@+id/timer_period_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:text="@string/timer_period"
                />

        </RelativeLayout>

        <View style="@style/divider"/>

    </LinearLayout>

</ScrollView>