<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextpostFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <!--THIS DUMMY ELEMENT IS NEEDED SO THAT THE FOCUS GOES TO THIS ELEMENT-->
        <!--AND NOT TO OTHER ELEMENTS AND POPS THE KEYBOARD-->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="UselessLeaf"
            />

        <Button
            android:id="@+id/intended_submit_date_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginStart="4dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="2dp"
            android:paddingBottom="12dp"
            tools:text="Set the date"
            />

        <View
            android:id="@+id/datetime_divider"
            style="@style/soft_divider"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/post_subreddit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/subreddit"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:background="@android:color/transparent"
                android:maxLength="21"
                />

        </LinearLayout>

        <View style="@style/soft_divider"/>

        <EditText
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/an_interesting_title"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:maxLength="300"
            />

        <View style="@style/soft_divider"/>

        <!--todo remove select all on focus on other textviews-->

        <EditText
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_text_post_optional"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:minLines="10"
            android:gravity="top|start"
            android:maxLength="40000"
            />

    </LinearLayout>

</ScrollView>